# nzfcc

./: Cargo.toml  README.md  build.rs  categories.json  deny.toml
.github/workflows/: toml.yaml
crates/nzfcc/: Cargo.toml
crates/nzfcc-generator/: Cargo.toml
crates/nzfcc-generator/src/: main.rs
crates/nzfcc/src/: lib.rs
src/: lib.rs
