[package]
name = "nzfcc"
version = "1.1.0"
edition = "2024"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "New Zealand Financial Category Codes (NZFCC) library"
repository = "https://github.com/josiahbull/nzfcc"
keywords = ["nzfcc", "finance", "categories", "new-zealand"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
clap = { version = "4", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]
clap = ["dep:clap"]
